src/components/css/details.css
a {
  color: inherit;
  text-decoration: none;
}

html {
  font-size: 10px;
  scroll-behavior: smooth;
}

body {
  background-color: hsla(210, 4%, 9%, 1);
  color: hsla(0, 0%, 100%, 1);
  font-family: DM Sans;
  font-size: 1.6rem;
  font-weight: 400;
  line-height: 1.85em;
  overflow-x: hidden;
  height: 100vh;
}

body.loaded { overflow: overlay; }
body.nav-active { overflow: hidden; }
::-webkit-scrollbar { width: 5px; }
::-webkit-scrollbar-track { background-color: transparent; }
::-webkit-scrollbar-thumb { background-color: hsl(38, 61%, 73%); }

a,img,data,span,input,
button,select,textarea { display: block; }

.headline-1{
    font-size: 5em;
}

.hover-underline {
  position: relative;
  max-width: max-content;
}

.hover-underline::after {
  content: "";
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  height: 5px;
  border-block: 1px solid hsl(38, 61%, 73%);
  transform: scaleX(0.2);
  opacity: 0;
  transition: 500ms ease;
}

.hover-underline:is(:hover, :focus-visible)::after {
  transform: scaleX(1);
  opacity: 1;
}

.contact-number::after { bottom: -5px; }

.text-center { text-align: center; }

.img-cover {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.section-subtitle {
  position: relative;
  color: hsl(38, 61%, 73%);
  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: 0.4em;
  margin-block-end: 12px;
}

.section {
  position: relative;
  padding-block: 70px;
  overflow: hidden;
  z-index: 1;
}

.bg-black-10 { background-color: hsla(30, 8%, 5%, 1); }

.grid-list {
  display: grid;
  gap: 40px;
}

.hover\:shine { position: relative; }

.hover\:shine::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 50%;
  height: 100%;
  background-image: linear-gradient(to right, transparent 0%, #fff6 100%);
  transform: skewX(-0.08turn) translateX(-180%);
}

.hover\:shine:is(:hover, :focus-within)::after {
  transform: skewX(-0.08turn) translateX(275%);
  transition: 1000ms ease;
}

.btn-text {
  color: hsl(38, 61%, 73%);
  padding-block-end: 4px;
  margin-inline: auto;
  text-transform: uppercase;
  letter-spacing: 0.2em;
  font-weight: 700;
  transition: 250ms ease;
}

.btn-text:is(:hover, :focus-visible) { color: hsla(0, 0%, 100%, 1); }

.shape {
  display: none;
  position: absolute;
  max-width: max-content;
  z-index: -1;
}

.move-anim { animation: move 5s linear infinite; }

@keyframes move {
  0%,
  100% { transform: translateY(0); }

  50% { transform: translateY(30px); }
}

.service .section-title { margin-block-end: 16px; }
.service .section-text { font-size: 1.3em; margin-block-end: 40px; }
.service-card { overflow-x: hidden; }

.service-card .has-before {
  padding-block: 30px;
  margin-block-end: 26px;
  z-index: 1;
}

.service-card .has-before::before {
  top: 0;
  left: 50%;
  transform: translateX(-50%);
  width: 140px;
  height: 100%;
  transition: 500ms ease;
  transition-delay: 0;
  z-index: -1;
  will-change: transform;
}

.service-card:is(:hover, :focus-within) .has-before::before {
  transform: rotateY(0.5turn) translateX(50%);
  transition-delay: 300ms;
}

.service-card .card-banner { transition: 500ms ease; }
.service-card:is(:hover, :focus-within) .card-banner { transform: scale(1.05); }
.service .card-title { margin-block-end: 12px; }

@media (min-width: 575px) {

  :is(.service, .about) .section-text {
    max-width: 420px;
    margin-inline: auto;
  }

  .service .container {
    max-width: 420px;
    margin-inline: auto;
  }

}

@media (min-width: 992px) {

  :is(.service, .event) .container { max-width: unset; }

  :is(.service, .event) .grid-list { grid-template-columns: repeat(3, 1fr); }

  :is(.service, .event) .grid-list li:last-child {
    grid-column: auto;
    width: 100%;
  }
  .service .shape { display: block; }

  .service .shape-1 {
    bottom: 0;
    left: 0;
  }

  .service .shape-2 {
    top: 0;
    right: 0;
  }
}

@media (min-width: 1200px) {
  .container,
  :is(.service, .event) .container {
    max-width: 1200px;
    width: 100%;
    margin-inline: auto;
  }
  .service .grid-list { gap: 150px; }

  .service .grid-list li:nth-child(2n+1) { transform: translateY(-160px); }

  .service .section-text { margin-block-end: 75px; }
}

